--- a/style/modal-and-toast.css
+++ b/style/modal-and-toast.css
@@ -33,17 +33,21 @@ input:-internal-autofill-selected {
 }
 
 /* Toast Bootstrap */
-
-.toast.custom:before{
+.toast-inner{
+  position: relative;
+}
+.toast-progress{
   content: '';
   position: absolute;
   bottom: 0;
-  left: 2px;
+  left: 0px;
   height: 3px;
   width: 98%;
   background-color: coral;
   animation: progress 3.1s linear forwards;
+  z-index: 10;
 }
+
 .toast-body.custom{
   width: 100%;
 }
