--- a/style/content-bookmark.css
+++ b/style/content-bookmark.css
@@ -11,12 +11,12 @@
     box-shadow: inset 4px 4px 6px black;
     max-width: 300px;
 }
-.url-book{
+.title-bookmark{
     font-size: 16px;
     font-weight: 500;
     margin-bottom: -5px !important;
 }
-.url-book::first-letter{
+.title-bookmark::first-letter{
     text-transform: uppercase;
     font-size: 20px;
     font-weight: 700;
