--- a/style/modal-and-toast.css
+++ b/style/modal-and-toast.css
@@ -74,7 +74,7 @@ input:-internal-autofill-selected {
   font-size: 22px !important;
 }
 
-.tutup{
+.close-button{
   display: flex;
   justify-content: center;
   align-items: center;
