--- a/style/navbar.css
+++ b/style/navbar.css
@@ -25,6 +25,18 @@ body{
 .storage{
     max-width: 300px;
 }
+.btn.storage{
+    background: linear-gradient(120deg,black, #00b7eb, black 100%);
+    transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        &:hover{
+            transform: scale(0.92);
+            box-shadow: inset 2px 2px 4px black;
+        }
+        &:active{
+            background: white;
+            color: black;
+        }
+}
 .color-picker{
     max-width: 200px;
 }
@@ -32,5 +44,7 @@ body{
     min-height: 50px;
     cursor: pointer;
 }
+
+
 
 
