--- a/style/navbar.css
+++ b/style/navbar.css
@@ -18,9 +18,37 @@ body{
 }
 .h2.custom {
     font-size: clamp(1rem, 3vw + 1rem, 2.5rem);
+    position: relative;
+    font-family: Cambria;
+    margin-bottom: 5px;
+    font-size: 2.4rem;
+    text-transform: uppercase;
+    display: block;
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc,
+    0 5px 0 #ccc, 0 6px 0 transparent, 0 7px 0 transparent, 0 8px 0 transparent,
+    0 9px 0 transparent, 0 10px 10px rgba(0, 0, 0, 0.4);
 }
+.h2.custom::before, .h2.custom::after{
+    content: "";
+    position: absolute;
+    top: 45px;
+    border: none;
+    left: 50%px;
+    height: 4px;
+    width: 35px;
+    border-radius: 50% 50%;
+    background: linear-gradient(120deg, coral, white, coral);
+    animation: clockwise 4s cubic-bezier(0.445, 0.05, 0.55, 0.95) infinite;
+}
+.h2.custom::after{
+    content: "";
+    right: 0px;
+    animation: counterClockwise 4s cubic-bezier(0.445, 0.05, 0.55, 0.95) infinite;
+}
+
 .h4.custom{
     font-size: clamp(0.8rem, 1.5vw + 0.5rem, 1.5rem);
+    margin-top: 5px;
 }
 .storage{
     max-width: 300px;
@@ -45,6 +73,22 @@ body{
     cursor: pointer;
 }
 
+@keyframes clockwise{
+    0%, 100%{
+        transform: translate(0px); 
+    }
+    50%{
+        transform: translate(240px) scale(1.5); 
+    }
+}
+@keyframes counterClockwise {
+    0%, 100% {
+        transform: translateX(0); 
+    }
+    50% {
+        transform: translate(-230px) scale(1.5); 
+    }
+}
 
 
 
